# cpp-chess

./: .gitignore  CMakeLists.txt
src/: bitboards.cpp  bitboards.h  board.cpp  board.h  game.cpp  game.h  main.cpp  move.h  piece.h  twoPlayerGame.cpp  twoPlayerGame.h  utils.cpp  utils.h
